--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
     "next": "15.1.6",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
     "react-dom": "^19.0.0",
     "remark": "^15.0.1",
-    "remark-html": "^16.0.1"
+    "remark-html": "^16.0.1",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
