--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "remark": "^15.0.1",
-    "remark-html": "^16.0.1",
-    "tailwind": "^4.0.0"
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
