--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/list": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "framer-motion": "^12.23.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
