--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
-    "next": "^15.3.3",
+    "next": "^15.3.5",
     "react": "^19.1.0",
+    "react-dev": "^0.0.1",
     "react-dom": "^19.1.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1"
